Corrected padding on body (header overlapping) productDetail, cart, products

--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -28,6 +28,7 @@ body.body-productCart {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-top: 80px;
 }
 
 .container {
