--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -28,6 +28,7 @@ body.productDetail {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-top: 80px;
 }
 
 .container {
