--- a/public/css/products.css
+++ b/public/css/products.css
@@ -24,6 +24,7 @@ body.body-products {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-top: 80px;
 }
 
 .container {
